[18.July 2009]
- level SwitchPlace: fixed error caused by deletion of useless monster class 
  Bear some time ago

[7.June 2009]
- gfx/help_button.png: new image by Ingo
- entities/helpbutton.rb: colour of helpbox changed (to darker red), slimmer
  border;
  when helpbox is being shown, another S or F key hides it immediatelly
- locs/TestsCampaign/CoreTestsLevelSet/IndividualStartingPoints/:
  began work on levels to prototype "individual starting points" (vikings
  don't have to start all on the same place)

[4.June 2009]
- game.rb, gamestate.rb: added new "spell" of "developers' magic" - key which
  forces new level to be loaded as if all vikings reached EXIT

[24.May 2009]
- gfx/panel/seperator2.png: 120px wide now (as needed)

[22.May 2009]
- bottompanel.rb, bpvikingview.rb: finished applying Ingo's improvements
  of BottomPanel: added separators (lines) between vikings and randomly
  generated backgrounds in inventories

[17.May 2009]
- gfx/panel/*: added Ingo's backgrounds and separators
- bottompanel.rb: support for background image; improved documentation
  of methods 'repaint_image' and 'paint'
- bpvikingview.rb: fixed placement of energy points; refactoring
- fvdef.rb: updated highest tested versions of libraries
- entities/helpbutton.rb, gfx/help.tga, gfx/help_button.png:
  image of HelpButton replaced by Ingo's new version

[16.May 2009]
- gfx/panel/*, gfx/apple.png: added more elements of Ingo's improvements
  on BottomPanel
- gfx/panel/energypunkt.png renamed to "energypoint_red.png"
- bpvikingview.rb: added Ingo's energy points (exactly: background and blue 
  extra point)

[10.May 2009]
- bpvikingview.rb, trash.rb, gfx/panel/*: adding Ingo's improvements 
  on BottomPanel;
  created new directory gfx/panel, some panel-connected graphics moved there

[16.February 2009]
- viking.rb: viking pulling right isn't catched inside the brick;
  removed last forgotten reference to Ability (made error on climbing);
  viking can't pull when he's rising;