@@ -1,11 +1,0 @@
-# locationscript.rb
-# igneus 26.12.2005
-
-require 'script'
-
-module FreeVikings
-  class LocationScript < Script
-    include FreeVikings
-    include SchwerEngine
-  end # class LocationScript
-end # module FreeVikings
