@@ -1,12 +1,14 @@
 [18.July 2009]
 - level SwitchPlace: fixed error caused by deletion of useless monster class 
   Bear some time ago
+- locationscript.rb: useless class discarded
+- locationloader.rb: small clean-ups; fixed truncating of backtrace
 
 [7.June 2009]
 - gfx/help_button.png: new image by Ingo
 - entities/helpbutton.rb: colour of helpbox changed (to darker red), slimmer
   border;
-  when helpbox is being shown, another S or F key hides it immediatelly
+  when helpbox is being shown, another S or F key hides it immediatelly 
 - locs/TestsCampaign/CoreTestsLevelSet/IndividualStartingPoints/:
   began work on levels to prototype "individual starting points" (vikings
   don't have to start all on the same place)
